# simple-testbench

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: architecture.md  development.md  file-formats.md  roadmap.md
example/: README.md  models.json  post_process.lua  providers.json  score_extract_ai.json  score_json.lua  scoring.json  system_prompts.json  tests.json
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/archive/: mod.rs
src/config/: mod.rs
src/llm/: anthropic_messages.rs  mod.rs  openai_chat.rs  openai_responses.rs  streaming.rs
src/output/: mod.rs
src/runner/: executor.rs  mod.rs  planner.rs
src/scoring/: mod.rs
tests/: archives.rs  cli_help.rs  live_chat.rs
