[package]
name = "stb"
version = "0.1.0"
edition = "2024"
description = "Structured task bench for model evaluation"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.18", features = ["v4"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.1"
tempfile = "3.23"
