[package]
name = "stb"
version = "0.1.2"
edition = "2024"
description = "Structured task bench for model evaluation"
license = "MIT"
authors = ["EvensonCalder <2443444863@qq.com>"]
repository = "https://github.com/EvensonCalder/simple-testbench"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["net", "rt", "time"] }
uuid = { version = "1.18", features = ["v4", "v5"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.1"
tempfile = "3.23"
